--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="org.kotemaru.android.taskkiller"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+<manifest
+    package="org.kotemaru.android.taskkiller"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-   <!-- <uses-permission android:name="android.permission.READ_PHONE_STATE"/> -->
+    <!-- <uses-permission android:name="android.permission.READ_PHONE_STATE"/> -->
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
@@ -17,8 +18,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.MainActivity" android:launchMode="singleInstance"
-            android:label="@string/app_name">
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,7 +29,12 @@
         </activity>
         <activity
             android:name=".activity.PrefActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name_setting"
+            android:launchMode="singleInstance"/>
+        <activity
+            android:name=".activity.WebViewActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleInstance"/>
 
         <service
             android:name=".service.InstanceKeepService"
