--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,10 @@ android {
     defaultConfig {
         applicationId "org.kotemaru.android.taskkiller"
         minSdkVersion 16
+        maxSdkVersion 23
         targetSdkVersion 22
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 4
+        versionName "1.1.1"
     }
     buildTypes {
         release {
